lib/translator/test/fixtures/ok/raw/ifs-scope.prg
PROGRAM ifs_scope
BEGIN
    BOOL x = false
    IF (BOOL x = false)
        INT y = 1
    ELSEIF (BOOL x = true)
        INT y = 2
    END
END
