lib/translator/test/fixtures/error/raw/wrong-arg-type.prg
PROGRAM wrong_arg_amount
BEGIN
    log(2)
END
